# GraphicInterviewPractice

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CUDA practice/: README.md
CUDA practice/Project_00_CUDA_Array_Multiply/: README.md  main  main.cu  main_check  main_sm89
CUDA practice/Project_01_CUDA_Monte_Carlo_Castle/: README.md  main.cu
CUDA practice/Project_02_CUDA_Grain_Deer_Simulation/: README.md  main.cu
CUDA practice/Project_03_CUDA_KMeans_Cities/: README.md  main.cu
CUDA practice/Project_04_CUDA_Array_Reduction/: README.md  main.cu
CUDA practice/Project_05_CUDA_Monte_Carlo_Castle/: README.md  main.cu
CUDA practice/Project_06_CUDA_Quadratic_Regression/: README.md  main.cu
CUDA practice/Project_07_CUDA_Fourier_Analysis/: README.md  main.cu
PlayStationInterview/: 01_HM_45_Min_Runbook.md  02_Story_Bank.md  03_Technical_Study_Sheet.md  04_Mock_Questions.md  05_Questions_To_Ask_HM.md  06_Company_And_Person_Research.md  07_Prep_Schedule.md  09_Codec_Interview_Cheat_Sheet.md  10_Cloud_Gaming_Video_Pipeline_Cheat_Sheet.md  11_Hardware_Acceleration_And_CPU_GPU_Sync_Cheat_Sheet.md  12_Multithreading_And_Queues_Cheat_Sheet.md  13_Profiling_And_Debugging_Cheat_Sheet.md  14_Cpp_For_Interview_Cheat_Sheet.md  15_Behavioral_Answer_Cheat_Sheet.md  README.md
include/: MathTypes.h
questions/: Q01_Implement_Vector_Addition.cpp  Q02_Implement_Vector_Subtraction.cpp  Q03_Implement_Scalar_Multiplication.cpp  Q04_Compute_Dot_Product.cpp  Q05_Compute_Cross_Product.cpp  Q06_Compute_Vector_Length.cpp  Q07_Normalize_a_Vector_Safely.cpp  Q08_Check_If_Two_Vectors_Are_Perpendicular.cpp  Q09_Check_If_Two_Vectors_Point_Same_Direction.cpp  Q10_Calculate_Angle_Between_Two_Vectors.cpp  Q11_Check_If_Target_Is_Inside_Field_of_View.cpp  Q12_Calculate_Triangle_Normal.cpp  Q13_Check_If_Triangle_Faces_Camera.cpp  Q14_Reflect_a_Vector_Around_a_Normal.cpp  Q15_Project_One_Vector_Onto_Another.cpp  Q16_Distance_Between_Two_Points.cpp  Q17_Build_Translation_Matrix.cpp  Q18_Build_Scale_Matrix.cpp  Q19_Transform_Point_by_Matrix.cpp  Q20_Transform_Direction_by_Matrix.cpp  Q21_Compose_Transform_Matrix.cpp  Q22_Convert_Degrees_to_Radians.cpp  Q23_Build_Camera_Basis.cpp  Q24_Implement_LookAt_View_Matrix.cpp  Q25_Convert_World_Position_to_Screen_Position.cpp  Q26_Ray-Plane_Intersection.cpp  Q27_Ray-Sphere_Intersection.cpp  Q28_Ray-AABB_Intersection.cpp  Q29_Linear_Interpolation.cpp  Q30_Vector_Lerp.cpp  Q31_SmoothStep.cpp  Q32_Clamp.cpp  Q33_Frustum_Sphere_Test.cpp  Q34_Make_Billboard_Quad_Face_Camera.cpp  Q35_Check_If_Point_Is_Inside_Rectangle.cpp  Q36_Batch_UI_Quads_by_Texture_ID.cpp  a.out
questions/3D math/: Q01_Implement_Vector_Addition.cpp  Q02_Implement_Vector_Subtraction.cpp  Q03_Implement_Scalar_Multiplication.cpp  Q04_Compute_Dot_Product.cpp  Q05_Compute_Cross_Product.cpp  Q06_Compute_Vector_Length.cpp  Q07_Normalize_a_Vector_Safely.cpp  Q08_Check_If_Two_Vectors_Are_Perpendicular.cpp  Q09_Check_If_Two_Vectors_Point_Same_Direction.cpp  Q10_Calculate_Angle_Between_Two_Vectors.cpp  Q11_Check_If_Target_Is_Inside_Field_of_View.cpp  Q12_Calculate_Triangle_Normal.cpp  Q13_Check_If_Triangle_Faces_Camera.cpp  Q14_Reflect_a_Vector_Around_a_Normal.cpp  Q15_Project_One_Vector_Onto_Another.cpp  Q16_Distance_Between_Two_Points.cpp  Q17_Build_Translation_Matrix.cpp  Q18_Build_Scale_Matrix.cpp  Q19_Transform_Point_by_Matrix.cpp  Q20_Transform_Direction_by_Matrix.cpp  Q21_Compose_Transform_Matrix.cpp  Q22_Convert_Degrees_to_Radians.cpp  Q23_Build_Camera_Basis.cpp  Q24_Implement_LookAt_View_Matrix.cpp  Q25_Convert_World_Position_to_Screen_Position.cpp  Q26_Ray-Plane_Intersection.cpp  Q27_Ray-Sphere_Intersection.cpp  Q28_Ray-AABB_Intersection.cpp  Q29_Linear_Interpolation.cpp  Q30_Vector_Lerp.cpp  Q31_SmoothStep.cpp  Q32_Clamp.cpp  Q33_Frustum_Sphere_Test.cpp  Q34_Make_Billboard_Quad_Face_Camera.cpp  Q35_Check_If_Point_Is_Inside_Rectangle.cpp  Q36_Batch_UI_Quads_by_Texture_ID.cpp  README.md
questions/coderpad_rendering/: CoderPad_All.cpp  Q01_Vec3_Basic_Operations.cpp  Q02_Angle_Between_Vectors.cpp  Q03_Field_Of_View_Test.cpp  Q04_Triangle_Normal_Facing_Camera.cpp  Q05_Transform_Point_vs_Direction.cpp  Q06_Ray_Plane_Intersection.cpp  Q07_Ray_Sphere_Intersection.cpp  Q08_Ray_AABB_Intersection.cpp  Q09_Sphere_Frustum_Culling.cpp  Q10_UI_Rectangle_Clipping.cpp  Q11_Count_UI_Batches.cpp  Q12_Sort_Render_Commands.cpp  Q13_Texture_RenderTarget_Memory_Cost.cpp  Q14_Frame_Budget_CPU_GPU_Bottleneck.cpp  coderpad_  coderpad_q01  coderpad_q02  coderpad_q03  coderpad_q04  coderpad_q05  coderpad_q06  coderpad_q07  coderpad_q08  coderpad_q09  coderpad_q10  coderpad_q11  coderpad_q12  coderpad_q13  coderpad_q14
questions/data_structure_builder/: Q09_Implement_Singly_Linked_List.cpp  Q10_Implement_Doubly_Linked_List.cpp  (+6 more)
scripts/: build_active_gcc.sh  build_active_msvc.ps1  run_all.sh
(+327 files in other folders)
